.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Type__c.object
<CustomObject>
    <description>The basic service type object.  Contains more static data.  Data more likely to change over time is stored in Service Type Version Records.</description>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SR Type</fullName>
                </value>
                <value>
                    <fullName>Geo</fullName>
                </value>
                <value>
                    <fullName>Questions</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Queue__c</fullName>
        <label>Default Queue</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Layer_Assignments__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geo Layer Assignments</label>
        <referenceTo>Geo_Layer_Assignments__c</referenceTo>
        <relationshipLabel>Service Types</relationshipLabel>
        <relationshipName>Service_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311_ExtId__c</fullName>
        <externalId>true</externalId>
        <label>Incap311 External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incap311__Active_Service_Type_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Service Type Version Id</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The active version must be marked as Is Active</errorMessage>
            <filterItems>
                <field>Incap311__Service_Type_Version__c.Incap311__Is_Activatable__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Incap311__Service_Type_Version__c.Incap311__Service_Type__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <infoMessage>Manually updating the Active Version will not trigger updates to open Service Request activities. If you want activities to be updates as well, click the &quot;Activate&quot; button on the Service Type Version you wish to make active.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Incap311__Service_Type_Version__c</referenceTo>
        <relationshipName>Service_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Active_Version_Number__c</fullName>
        <formula>Incap311__Active_Service_Type_Version__r.Incap311__Version_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Auto_Close_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If Auto Close is enabled, the number of days until a service request with this type is auto closed.</description>
        <inlineHelpText>If Auto Close is enabled, the number of days until a service request with this type is auto closed.</inlineHelpText>
        <label>Auto Close Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Auto_Close_Reason__c</fullName>
        <description>If Auto Close is enabled, the canned closure reason that is saved on the service request when closed by the system.</description>
        <label>Auto Close Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Auto_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to enable auto close. If enabled, the system will auto close any service requests of this type automatically.</description>
        <inlineHelpText>Check box to enable auto close. If enabled, the system will auto close any service requests of this type automatically.</inlineHelpText>
        <label>Auto Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Contact_Status__c</fullName>
        <description>Determines if service requests of this type can be submitted anonymously or require contact information.</description>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Not Visible</fullName>
                </value>
                <value>
                    <fullName>Required (LN, FN, EM)</fullName>
                </value>
                <value>
                    <fullName>Required (LN, FN, PH)</fullName>
                </value>
                <value>
                    <fullName>Required (LN, FN, EM or PH)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Daily_Request_Limit__c</fullName>
        <description>The number of service requests allowed per scheduled day for pickups. This is different from &quot;Items Limit&quot; in that it is the # of requests vs items on the trucks.</description>
        <label>Daily Request Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Enable_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Enable_Scheduling_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will determine if scheduling hours should be considered when applying for a new schedule on a type.</description>
        <inlineHelpText>This checkbox will determine if scheduling hours should be considered when applying for a new schedule on a type.</inlineHelpText>
        <label>Enable Scheduling Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__External_Description__c</fullName>
        <description>The description of this service request type that will be available via the API. It is the service request type description that would appear in web and mobile applications, too.</description>
        <label>External Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__External_Name__c</fullName>
        <description>The name of this service request type that will appear in the API. This is the service request name that will be presented in web and mobile applications, too.</description>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Bulk_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox determines if the service type is of a schedule type or not.</description>
        <inlineHelpText>Check this box if the current service type is meant to be flagged as a scheduled collection type.</inlineHelpText>
        <label>Is Schedule Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Item_Limit__c</fullName>
        <description>The number of items allowed per request made for a schedule-able service request.</description>
        <label>Item Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Number_Of_Schedules__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Indicates the # of available schedules that will be displayed as buttons in the 311 Console App during service request creation (acceptable #&apos;s: 0, 1, 3, 5).</description>
        <inlineHelpText>Indicates the # of available schedules that will be displayed as buttons in the 311 Console App during service request creation (acceptable #&apos;s: 0, 1, 3, 5).</inlineHelpText>
        <label>Number Of Schedules</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Private_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all the attachments on service requests are not visible on web or mobile and are hidden from integrators using the API. This flag takes precedence over similar flag on STV</description>
        <inlineHelpText>If checked, all the attachments on service requests are not visible on web or mobile and are hidden from integrators using the API. This flag takes precedence over similar flag on STV</inlineHelpText>
        <label>Private Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Reset_SLA_on_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the SLA should be restarted when a service request is transferred to this service request type.</description>
        <inlineHelpText>If checked, the SLA will be restarted when a service request is transferred to this service request type.</inlineHelpText>
        <label>Reset SLA on Transfer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Schedulable_Requests_Limit_Month__c</fullName>
        <description>The # of service requests of this type that may be scheduled for a specific location per month.</description>
        <inlineHelpText>The # of service requests of this type that may be scheduled for a specific location per month.</inlineHelpText>
        <label>Schedulable Requests Limit/Month</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Schedulable_Requests_Limit_Year__c</fullName>
        <description>The # of service requests of this type that may be scheduled for a specific location per year.</description>
        <inlineHelpText>The # of service requests of this type that may be scheduled for a specific location per year.</inlineHelpText>
        <label>Schedulable Requests Limit/Year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Schedule_After_Days__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The minimum # of days in advance that a schedule must be submitted. For example, if the value is 3, a citizen must submit a service request a minimum of 3 days in advance of the next available schedule date.</description>
        <inlineHelpText>The minimum # of days in advance that a schedule must be submitted. For example, if the value is 3, a citizen must submit a service request a minimum of 3 days in advance of the next available schedule date.</inlineHelpText>
        <label>Schedule After (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Schedule_Duplicate_Detection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, duplicate requests for a location will be blocked.</description>
        <inlineHelpText>If enabled, duplicate requests for a location will be blocked.</inlineHelpText>
        <label>Schedule Duplicate Detection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Schedule_Matching__c</fullName>
        <description>This should be a JSON snippet for matching a geo layer field to a Schedule Zone value for scheduling. Example:
{&quot;zone&quot;: {&quot;layer_name&quot;:&quot;Layer-Name-Goes-Here&quot;, &quot;layer_value&quot;:&quot;Layer-Value-Goes-Here&quot;}}</description>
        <inlineHelpText>This should be a JSON snippet for matching a geo layer field to a Schedule Zone value for scheduling. Example:
{&quot;zone&quot;: {&quot;layer_name&quot;:&quot;Layer-Name-Goes-Here&quot;, &quot;layer_value&quot;:&quot;Layer-Value-Goes-Here&quot;}}</inlineHelpText>
        <label>Schedule Matching</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Schedule_Range__c</fullName>
        <description>The range of days in which schedules may be available (e.g. a value of 90 would mean the system will look for all available schedules for a location within the next 90 days).</description>
        <inlineHelpText>The range of days in which schedules may be available (e.g. a value of 90 would mean the system will look for all available schedules for a location within the next 90 days).</inlineHelpText>
        <label>Schedule Range</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Schedule_Type__c</fullName>
        <description>The type of schedules available to process. Description of types available for scheduled pickup: 
Items - the number of items to pick up
Requests - the number of requests</description>
        <inlineHelpText>Description of types available for scheduled pickup: 
Items - the number of items to pick up
Requests - the number of requests</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Items</fullName>
                </value>
                <value>
                    <fullName>Requests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Service_Description__c</fullName>
        <description>The description of this service request type that will appear in the 311 Console App during service request creation.</description>
        <inlineHelpText>The description of this service request type that will appear in the 311 Console App during service request creation.</inlineHelpText>
        <label>Service Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Location_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, service requests of this type will require a location be provided for the service request to be created.</description>
        <inlineHelpText>If enabled, service requests of this type will require a location be provided for the service request to be created.</inlineHelpText>
        <label>Service Location Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Name__c</fullName>
        <description>The name of the service request type.</description>
        <label>Service Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Code__c</fullName>
        <description>The unique configurable code for this service request type.</description>
        <label>Service Type Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Set_Expected_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables capturing the scheduled date as the expected finish date for service requests of this type.</description>
        <inlineHelpText>Check this box to capture the scheduled date as the expected finish date for service requests of this type.</inlineHelpText>
        <label>Set Expected Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Show_Schedule_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables a calendar picker widget on the service request creation screen in the 311 Console app.</description>
        <inlineHelpText>Enables a calendar picker widget on the service request creation screen in the 311 Console app.</inlineHelpText>
        <label>Show Schedule Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Special_Service_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted Service Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service request that would be generated only by system functions (automated processes). If checked, the service request type will not appear in any service request creation menus (Agent Console, Web, Mobile).</description>
        <inlineHelpText>Service request that would be generated only by system functions (automated processes). If checked, the service request type will not appear in any service request creation menus (Agent Console, Web, Mobile).</inlineHelpText>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Transfer_To_All_Types__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows this service request to be transferred to any other service request.</inlineHelpText>
        <label>Transfer To All Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Categories__c</fullName>
        <description>This field is used to store internal category of a Service Request. Used for reporting purposes.</description>
        <label>Reporting Categories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Ordinance</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retention_Number__c</fullName>
        <label>Retention Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Service Type</label>
    <nameField>
        <displayFormat>SRT-{00000000}</displayFormat>
        <label>Service Type Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Incap311__No_Special_Chars_In_ST_Code</fullName>
        <active>true</active>
        <description>Validates for only alphanumeric, hyphen, and underscore in Service Type Code field</description>
        <errorConditionFormula>NOT(REGEX(Incap311__Service_Type_Code__c, &quot;[a-zA-Z0-9_-]+&quot;))</errorConditionFormula>
        <errorDisplayField>Incap311__Service_Type_Code__c</errorDisplayField>
        <errorMessage>You must only use alphanumeric (a-z, 0-9), hyphen, or underscore in the Service Type Code field.</errorMessage>
    </validationRules>
</CustomObject>